# CGS

./: .gitignore  .gitmodules  CMakeLists.txt  attitude.cpp  attitude.h  dataflashparser.cpp  dataflashparser.h  defaultdevicewidget.cpp  defaultdevicewidget.h  deviceslist.h  devicestable.cpp  devicestable.h  devicestable.ui  globalpositionint.cpp  globalpositionint.h  localpositionned.h  logparameterswindow.h  logplotwindow.cpp  logplotwindow.h  logplotwindow.ui  logswindow.cpp  logswindow.h  logswindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mavlinkcontext.cpp  mavlinkcontext.h  mavlinkdevice.cpp  mavlinkdevice.h  parameterlist.cpp  parameterlist.h  parameterlist.ui  plot.cpp  plot.h  plotgroup.cpp  plotgroup.h  plotgroup.ui  plotter.cpp  plotter.h  (+17 more)
.cache/clangd/index/: Parameter.h.FAF01D3CF4142B34.idx  Parameters.h.6F2771706EF964FB.idx  ProtocolSubscriber.h.1BD072BF1D8C145D.idx  altitudelabel.cpp.D37EF0CAC644C5EC.idx  altitudelabel.h.0F00ED47E3BE2347.idx  altitudelabel.h.C1622D0B0D5D0478.idx  attitudelabel.cpp.3E47F1FDDC54A466.idx  attitudelabel.h.7987EBC735601F05.idx  attitudelabel.h.A2899CCFF5B8CF91.idx  basedevice.cpp.587406E5D9B0D2A4.idx  basedevice.h.6279F90E6840DEBF.idx  basepacketizer.cpp.696AF6EE9892F6E2.idx  basepacketizer.h.AF4233258843EA7A.idx  checksum.h.0BCEACC773929F6B.idx  common.h.FEEFB67CE9089B20.idx  dataflashparser.cpp.F081A265FD645358.idx  dataflashparser.h.E716AA985788EC87.idx  defaultdevicewidget.cpp.00E7AA0D7A02A543.idx  defaultdevicewidget.h.E3399B7FB525E1A0.idx  devicestable.cpp.A289C09B0EE1165D.idx  devicestable.h.19377A0D4F8F5E6B.idx  gcslog.cpp.DCF289A091157591.idx  gcslog.h.10334A5732141650.idx  gcslog.h.287A786BFB48BED8.idx  logparameterswindow.cpp.200DAC1D490B2449.idx  logparameterswindow.h.BB7F576D837EDD58.idx  logplotwindow.cpp.70946DB96E4D982E.idx  logplotwindow.h.FEA0970976A252E7.idx  logswindow.cpp.08BCE11F9A4EF6E0.idx  logswindow.h.E7477F33C724D614.idx  main.cpp.08B1C717D8007FE5.idx  mainwindow.cpp.1E5F2C7A9711F28C.idx  mainwindow.h.1B20C32DAED90AC5.idx  mavlink.h.2D66664C8D28EFCB.idx  mavlink_conversions.h.3DCF1501B702608C.idx  mavlink_get_info.h.59FC8F960C18BFC4.idx  mavlink_helpers.h.4AF5193C6B87098C.idx  mavlink_msg_actuator_control_target.h.4069BF60C2A4BCD1.idx  mavlink_msg_actuator_output_status.h.D79EA8DDBE22C035.idx  mavlink_msg_adsb_vehicle.h.E38425D2A532070E.idx  (+290 more)
src/UI/: altitudelabel.cpp  altitudelabel.h  attitudelabel.cpp  attitudelabel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  speedslabel.cpp  speedslabel.h
src/UI/deviceManagement/: adddevice.cpp  adddevice.h  adddevice.ui  connecteddevices.cpp  connecteddevices.h  connecteddevices.ui  defaultdevicewidget.cpp  defaultdevicewidget.ui  devices.cpp  devices.h  devices.ui  devicestable.cpp  devicestable.h  devicestable.ui  serialconnection.cpp  serialconnection.h  serialconnection.ui  serialscanner.cpp
src/UI/logs/: logparameterswindow.cpp  logparameterswindow.h  logparameterswindow.ui  logplotwindow.cpp  logplotwindow.h  logswindow.cpp  logswindow.h  logswindow.ui
src/UI/parameters/: parameterlist.cpp  parameterlist.h  parameterlist.ui
src/UI/plotter/: plot.cpp  plot.h  plotgroup.cpp  plotgroup.h  plotter.cpp  plotter.h
src/UI/telemetry/: telemetrywindow.cpp  telemetrywindow.h  telemetrywindow.ui
src/UI/widgets/: altitudelabel.cpp  altitudelabel.h  armlabel.cpp  armlabel.h  attitudelabel.cpp  attitudelabel.h  gcslog.cpp  gcslog.h  modelabel.cpp  modelabel.h  speedslabel.cpp  speedslabel.h
src/channelManagement/: ChannelGroup.cpp  ChannelGroup.h  ChannelManager.cpp  ChannelManager.h  RemoteChannel.cpp  RemoteChannel.h  RemoteChannelID.cpp  RemoteChannelID.h
src/componentSystem/: Component.cpp  Component.h  CompositeComponent.cpp  CompositeComponent.h
src/componentSystem/AtomicComponents/: AltitudeComponent.cpp  AltitudeComponent.h  TelemetryComponent.cpp  TelemetryComponent.h
src/deviceManagement/: DeviceManager.cpp  DeviceManager.h  basedevice.cpp  basedevice.h
src/deviceManagement/serial/: serialdevice.cpp  serialdevice.h
src/deviceManagement/udp/: udpdevice.cpp  udpdevice.h
src/mavlink/: dataflashparser.cpp  dataflashparser.h  localpositionned.cpp  mavlinkcontext.cpp  mavlinkcontext.h  mavlinkdevice.cpp  mavlinkdevice.h  mavlinkpacketizer.cpp  mavlinkpacketizer.h  mavlinksubscriber.h  mavlinktypes.h  serialmavlinkdevice.cpp  serialmavlinkdevice.h  statustext.cpp  statustext.h  vehicletelemetry.cpp  vehicletelemetry.h
src/memoryManagement/: segmentationchecker.cpp  segmentationchecker.h  segmentmap.cpp  segmentmap.h
src/protocols/: Protocol.cpp  Protocol.h  ProtocolFabric.cpp  ProtocolFabric.h  ProtocolMonitor.cpp  ProtocolMonitor.h  ProtocolSubscriber.cpp  ProtocolSubscriber.h  basepacketizer.cpp  basepacketizer.h  message.cpp  message.h
src/protocols/mavlink/: MavlinkFwd.h  MavlinkProtocol.cpp  MavlinkProtocol.h  MavlinkProtocolFabric.cpp  MavlinkProtocolFabric.h  mavlinkpacketizer.cpp  mavlinkpacketizer.h
src/tools/: hashes.cpp  hashes.h  tokenize.h
src/vehicle/: PhysicalVehicle.cpp  PhysicalVehicle.h  Vehicle.cpp  Vehicle.h  vehicle.cpp  vehicle.h
src/vehicle/logs/: dataflashparser.cpp  dataflashparser.h  vehiclelogs.cpp  vehiclelogs.h
src/vehicle/logs/mavlink/: mavlinkvehiclelogs.cpp  mavlinkvehiclelogs.h
src/vehicle/mavlink/: mavlinkvehicle.cpp  mavlinkvehicle.h
src/vehicle/parameters/: Parameter.cpp  Parameter.h  Parameters.cpp  Parameters.h
src/vehicle/statuslog/: vehiclestatuslog.cpp  vehiclestatuslog.h
src/vehicle/statuslog/mavlink/: mavlinkvehiclestatuslog.cpp  mavlinkvehiclestatuslog.h
src/vehicle/telemetry/: vehicletelemetry.cpp  vehicletelemetry.h
src/vehicle/telemetry/mavlink/: mavlinkvehicletelemetry.cpp  mavlinkvehicletelemetry.h
src/vehicleManagement/: VehicleId.h  VehicleManager.cpp  VehicleManager.h
